bug fix css scrollbar header intent and added tooltip in action menu

--- a/src/app/chatbot-design-studio/cds-dashboard/cds-canvas/cds-intent/cds-intent.component.scss
+++ b/src/app/chatbot-design-studio/cds-dashboard/cds-canvas/cds-intent/cds-intent.component.scss
@@ -92,6 +92,7 @@
     padding: 0 0px 10px 0px;
     // background-color: rgb(235, 226, 198);
     background-color: var(--intent-header-background);
+    overflow: hidden;
   }
 
   // --------------------------------
